installing and using siema and basicLightbox libs

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,27 @@
   </head>
 
   <body>
-    <article class="intro">
-      <h1>Webpack starter kit</h1>
+    <!-- <article class="intro">
+      <h1>Webpack starter kit</h1> -->
 
-      <!-- HTML image reference example. -->
-      <img src="./images/intro.png" alt="" width="640" />
-    </article>
+    <!-- HTML image reference example. -->
+    <!-- <img src="./images/intro.png" alt="" width="640" />
+    </article> -->
+
+    <button type="button" data-open="OPEN">OPEN</button>
+
+    <template id="modal">
+      <div class="modal">
+        <button type="button" data-close="" ="CLOSE">CLOSE</button>
+        <p>I'm a modal created from a DOM element/node.</p>
+      </div>
+    </template>
+    <div class="siema">
+      <div>Hi, I'm slide 1</div>
+      <div>Hi, I'm slide 2</div>
+      <div>Hi, I'm slide 3</div>
+      <div>Hi, I'm slide 4</div>
+    </div>
+    <!-- <script src="./index.js"></script> -->
   </body>
 </html>
