--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     <!-- <img src="./images/intro.png" alt="" width="640" />
     </article> -->
 
+    <!-- basicLightbox -->
     <button type="button" data-open="OPEN">OPEN</button>
 
     <template id="modal">
@@ -50,12 +51,20 @@
         <p>I'm a modal created from a DOM element/node.</p>
       </div>
     </template>
+
+    <!-- siema -->
     <div class="siema">
       <div>Hi, I'm slide 1</div>
       <div>Hi, I'm slide 2</div>
       <div>Hi, I'm slide 3</div>
       <div>Hi, I'm slide 4</div>
     </div>
+
+    <!-- счетчик используя bootstrap -->
+    <div class="container">
+      <div id="timer"></div>
+    </div>
+
     <!-- <script src="./index.js"></script> -->
   </body>
 </html>
