creates timer plugin

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,8 @@
     <!-- счетчик используя bootstrap -->
     <div class="container">
       <div id="timer"></div>
+      <div id="timer2"></div>
+      <div id="timer3"></div>
     </div>
 
     <!-- <script src="./index.js"></script> -->
