--- a/src/index.html
+++ b/src/index.html
@@ -60,11 +60,15 @@
       <div>Hi, I'm slide 4</div>
     </div>
 
-    <!-- счетчик используя bootstrap -->
-    <div class="container">
+    <!-- TIMER используя bootstrap -->
+    <!-- <div class="container">
       <div id="timer"></div>
       <div id="timer2"></div>
       <div id="timer3"></div>
+    </div> -->
+
+    <div class="container">
+      <div id="todo-list"></div>
     </div>
 
     <!-- <script src="./index.js"></script> -->
