--- a/src/index.html
+++ b/src/index.html
@@ -43,22 +43,22 @@
     </article> -->
 
     <!-- basicLightbox -->
-    <button type="button" data-open="OPEN">OPEN</button>
+    <!-- <button type="button" data-open="OPEN">OPEN</button>
 
     <template id="modal">
       <div class="modal">
         <button type="button" data-close="" ="CLOSE">CLOSE</button>
         <p>I'm a modal created from a DOM element/node.</p>
       </div>
-    </template>
+    </template> -->
 
     <!-- siema -->
-    <div class="siema">
+    <!-- <div class="siema">
       <div>Hi, I'm slide 1</div>
       <div>Hi, I'm slide 2</div>
       <div>Hi, I'm slide 3</div>
       <div>Hi, I'm slide 4</div>
-    </div>
+    </div> -->
 
     <!-- TIMER используя bootstrap -->
     <!-- <div class="container">
@@ -67,9 +67,13 @@
       <div id="timer3"></div>
     </div> -->
 
-    <div class="container">
+    <!-- ------------TODO-------- -->
+    <!-- <div class="container">
       <div id="todo-list"></div>
-    </div>
+    </div> -->
+
+    <!-- --------TEMPLATING------- -->
+    <ul class="gallery js-gallery"></ul>
 
     <!-- <script src="./index.js"></script> -->
   </body>
