--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,21 @@
     <!-- --------TEMPLATING------- -->
     <ul class="gallery js-gallery"></ul>
 
+    <!-- --------LOCALSTORAGE------ -->
+    <form action="">
+      <label for="">Name</label>
+      <input type="input" value="" class="input" placeholder="anonymous" />
+      <label for="">Message</label>
+      <textarea
+        name=""
+        id=""
+        cols="30"
+        rows="10"
+        class="area"
+        placeholder="enter your message"
+      ></textarea>
+    </form>
+
     <!-- <script src="./index.js"></script> -->
   </body>
 </html>
