--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,11 @@
     </div> -->
 
     <!-- TIMER используя bootstrap -->
-    <!-- <div class="container">
+    <div class="container">
       <div id="timer"></div>
       <div id="timer2"></div>
       <div id="timer3"></div>
-    </div> -->
+    </div>
 
     <!-- ------------TODO-------- -->
     <!-- <div class="container">
@@ -73,21 +73,25 @@
     </div> -->
 
     <!-- --------TEMPLATING------- -->
-    <ul class="gallery js-gallery"></ul>
+    <!-- <ul class="gallery js-gallery"></ul> -->
 
     <!-- --------LOCALSTORAGE------ -->
-    <form action="">
-      <label for="">Name</label>
-      <input type="input" value="" class="input" placeholder="anonymous" />
-      <label for="">Message</label>
-      <textarea
-        name=""
-        id=""
-        cols="30"
-        rows="10"
-        class="area"
-        placeholder="enter your message"
-      ></textarea>
+    <form class="form">
+      <label for=""
+        >Name<input type="input" value="" class="input" placeholder="anonymous"
+      /></label>
+
+      <label for=""
+        >Message<textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          class="area"
+          placeholder="enter your message"
+        ></textarea>
+      </label>
+      <button type="submit">Send feedback</button>
     </form>
 
     <!-- <script src="./index.js"></script> -->
