--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,11 @@
     </div> -->
 
     <!-- TIMER используя bootstrap -->
-    <div class="container">
+    <!-- <div class="container">
       <div id="timer"></div>
       <div id="timer2"></div>
       <div id="timer3"></div>
-    </div>
+    </div> -->
 
     <!-- ------------TODO-------- -->
     <!-- <div class="container">
@@ -76,7 +76,7 @@
     <!-- <ul class="gallery js-gallery"></ul> -->
 
     <!-- --------LOCALSTORAGE------ -->
-    <form class="form">
+    <!-- <form class="form">
       <label for=""
         >Name<input type="input" value="" class="input" placeholder="anonymous"
       /></label>
@@ -92,7 +92,16 @@
         ></textarea>
       </label>
       <button type="submit">Send feedback</button>
-    </form>
+    </form> -->
+
+    <!-- ----------TIMER ASYNC--------- -->
+    <div class="timer">
+      <p class="clockface js-clockface"></p>
+      <div class="actions">
+        <button class="timer-btn" data-action-start="">START</button>
+        <button class="timer-btn" data-action-stop="">STOP</button>
+      </div>
+    </div>
 
     <!-- <script src="./index.js"></script> -->
   </body>
